adicionando css tabela

--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 }
 
 .container {
-    max-width: 600px;
-    width: 100%;
+    max-width: 1000px;
+    width: 90%;
     margin: 0;
     padding: 25px;
     background-color: #fff;
@@ -124,4 +124,45 @@ button[type="submit"]:hover {
 .nav a:hover {
     background-color: #ddd;
     text-decoration: none;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    text-align: center;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px var(--cor-sombra);
+}
+
+th,td, th {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    font-size: 15px;
+    border:1px solid #ddd;
+}
+
+th, td{
+    padding: 10px;
+    vertical-align: middle;
+}
+
+
+tr:nth-child(even) {
+    background-color: #ffffff;
+}
+
+button {
+    padding: 6px 12px;
+     border: none;
+    border-radius: 5px;
+    background-color: #a0a0a0;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+button:hover {
+    background-color: var(--cor-botao-hover);
 }
