--- a/style.css
+++ b/style.css
@@ -13,26 +13,26 @@ body {
     box-sizing: border-box;
 }
 
-.container {
+div.container {
     max-width: 1000px;
     width: 90%;
     margin: 0;
     padding: 25px;
-    background-color: #fff;
+    background-color: #202020;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     box-sizing: border-box;
 }
 
 h1 {
-    color: #333;
+    color: #f6f6f6;
     text-align: center;
     margin-top: 0;
     margin-bottom: 25px;
 }
 
 a {
-    color: #494949;
+    color: #f6f6f6;
     text-decoration: none;
     display: inline-block;
     margin-bottom: 20px;
@@ -51,7 +51,8 @@ label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
-    color: #555;
+    color: #f6f6f6;
+    
 }
 
 input[type="text"],
@@ -61,17 +62,18 @@ input[type="date"] {
     width: 100%;
     padding: 12px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid #141414;
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 16px;
+    background-color: #333;
 }
 
 button[type="submit"] {
     display: block;
     width: 100%;
     padding: 12px;
-    background-color: #232c35;
+    background-color: #005d9b;
     color: white;
     border: none;
     border-radius: 4px;
@@ -82,7 +84,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #1b89ff;
 }
 
 .msg-success {
