adicionando css menu lateral

--- a/paginaInicial.css
+++ b/paginaInicial.css
@@ -14,7 +14,7 @@ body{
 
 header.inicio{
     background-color: #202020;
-    border-bottom: 2px solid #005d9b;
+    border-bottom: 2px solid #1d1d1d;
 }
 
 header div.titulo{
