--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: #3d3d3d;
+    color: #f6f6f6;
     margin: 0;
     padding: 20px;
     line-height: 1.6;
@@ -22,6 +22,7 @@ div.container {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     box-sizing: border-box;
+    user-select: none;
 }
 
 h1 {
@@ -52,11 +53,13 @@ label {
     margin-bottom: 8px;
     font-weight: bold;
     color: #f6f6f6;
+    user-select: none;
     
 }
 
 input[type="text"],
 input[type="number"],
+input[type="tel"],
 input[type="email"],
 input[type="date"] {
     width: 100%;
@@ -67,6 +70,7 @@ input[type="date"] {
     box-sizing: border-box;
     font-size: 16px;
     background-color: #333;
+    color: #f6f6f6;
 }
 
 button[type="submit"] {
@@ -139,9 +143,9 @@ table {
 
 th,td, th {
     padding: 10px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #005d9b;
     font-size: 15px;
-    border:1px solid #ddd;
+    border:1px solid #005d9b;
 }
 
 th, td{
@@ -151,7 +155,7 @@ th, td{
 
 
 tr:nth-child(even) {
-    background-color: #ffffff;
+    background-color: #202020;
 }
 
 button {
