--- a/paginaInicial.css
+++ b/paginaInicial.css
@@ -1,5 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root{
+    --body-bg-color: #3d3d3d;
+    --body-color: #fafafa;
+    --color-alugacars: #005d9b;
+    --color-abas: #202020;
+    --color-indicador: #000;
+
+}
+
+.light-mode:root{
+    --body-bg-color: #cacaca;
+    --body-color: #181818;
+    --color-alugacars: #005d9b;
+    --color-abas: #ebebeb;
+    --bg-text-box:#dfdfdf;
+    --color-indicador: #b1b1b1;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -9,26 +27,28 @@
 
 body{
     height: 100vh;
-    background-color: #3d3d3d;
+    background-color: var(--body-bg-color);
+    color: var(--body-color);
 }
 
 header.inicio{
-    background-color: #202020;
+    background-color: var(--color-abas);
     border-bottom: 2px solid #1d1d1d;
+    display: flex;
+    justify-content: space-between;
 }
 
 header div.titulo{
     margin-left: 75px;
     display: flex;
     align-items: center;
-    background-color: #202020;
+    background-color: var(--color-abas);
     padding: 10px;
     user-select: none;
     
 }
 
 h1{
-    color:#fff;
     margin-left: .3%;
     font-weight:250;
 }
@@ -49,7 +69,7 @@ h1 i{
 .container img {
     display: block;
     width: 100%;            
-    border: 2px solid #005d9b
+    border: 2px solid var(--color-alugacars);
 }
 
 .anuncioCarros {
@@ -57,9 +77,40 @@ h1 i{
     top: 80%;               
     left: 50%;              
     transform: translate(-50%, -50%);
-    color: #f6f6f6;           
+    color: white;           
     font-size: 2rem;       
     font-weight: bold;
     text-shadow: 2px 2px 5px black; 
     white-space: nowrap;
+}
+
+.trilho{
+    margin-top: 12px;
+    margin-right: 20px;
+    width: 80px;
+    height: 40px;
+    background-color: var(--body-bg-color);
+    border-radius: 150px;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+}
+
+.trilho .indicador{
+    width: 40px;
+    height: 40px;
+    background-color: var(--color-indicador);
+    border-radius: 50%;
+    transform: scale(.9);
+    user-select: none;
+    position: absolute;
+    left: 0;
+    transition: 0.5s;
+}
+
+
+.trilho.light-mode .indicador{
+    left: 40px;
+    background-color: var(--color-indicador);
+    transition: 0.5s;
 }
