--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
+:root{
+    --body-bg-color: #3d3d3d;
+    --body-color: #fafafa;
+    --color-alugacars: #005d9b;
+    --color-abas: #202020;
+    --color-indicador: #000;
+
+}
+
+.light-mode:root{
+    --body-bg-color: #cacaca;
+    --body-color: #181818;
+    --color-alugacars: #005d9b;
+    --color-abas: #ebebeb;
+    --bg-text-box:#dfdfdf;
+    --color-indicador: #b1b1b1;
+}
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #3d3d3d;
-    color: #f6f6f6;
+    background-color: var(--body-bg-color);
+    color: var(--body-color);
     margin: 0;
     padding: 20px;
     line-height: 1.6;
@@ -13,12 +31,44 @@ body {
     box-sizing: border-box;
 }
 
+.trilho{
+    margin-top: 12px;
+    margin-right: 20px;
+    width: 80px;
+    height: 40px;
+    background-color: var(--body-bg-color);
+    border-radius: 150px;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+}
+
+.trilho .indicador{
+    width: 40px;
+    height: 40px;
+    background-color: var(--color-indicador);
+    border-radius: 50%;
+    transform: scale(.9);
+    user-select: none;
+    position: absolute;
+    left: 0;
+    transition: 0.5s;
+}
+
+
+.trilho.light-mode .indicador{
+    left: 40px;
+    background-color: var(--color-indicador);
+    transition: 0.5s;
+}
+
+
 div.container {
     max-width: 1000px;
     width: 90%;
     margin: 0;
     padding: 25px;
-    background-color: #202020;
+    background-color: var(--color-abas);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     box-sizing: border-box;
@@ -26,14 +76,14 @@ div.container {
 }
 
 h1 {
-    color: #f6f6f6;
+    color: var(--body-color);
     text-align: center;
     margin-top: 0;
     margin-bottom: 25px;
 }
 
 a {
-    color: #f6f6f6;
+    color: var(--body-color);
     text-decoration: none;
     display: inline-block;
     margin-bottom: 20px;
@@ -52,7 +102,7 @@ label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
-    color: #f6f6f6;
+    color: var(--body-color);
     user-select: none;
     
 }
@@ -69,8 +119,8 @@ input[type="date"] {
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 16px;
-    background-color: #333;
-    color: #f6f6f6;
+    background-color: var(--bg-text-box);
+    color: var(--body-color);
 }
 
 select{
@@ -81,7 +131,7 @@ select{
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 16px;
-    background-color: #333;
+    background-color: var(--bg-text-box);
     color: #f6f6f6;
 }
 
@@ -89,8 +139,8 @@ button[type="submit"] {
     display: block;
     width: 100%;
     padding: 12px;
-    background-color: #005d9b;
-    color: white;
+    background-color: var(--color-alugacars);
+    color: var(--body-color);
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -133,7 +183,7 @@ button[type="submit"]:hover {
     margin-bottom: 12px;
     background-color: #e9e9e9;
     border-radius: 5px;
-    color: #333;
+    color: var(--bg-text-box);
     font-weight: bold;
     font-size: 18px;
     text-align: center;
@@ -155,9 +205,9 @@ table {
 
 th,td, th {
     padding: 10px;
-    border-bottom: 1px solid #005d9b;
+    border-bottom: 1px solid var(--color-alugacars);
     font-size: 15px;
-    border:1px solid #005d9b;
+    border:1px solid var(--color-alugacars);
 }
 
 th, td{
@@ -167,7 +217,7 @@ th, td{
 
 
 tr:nth-child(even) {
-    background-color: #202020;
+    background-color: var(--bg-text-box);
 }
 
 button {
@@ -175,7 +225,7 @@ button {
      border: none;
     border-radius: 5px;
     background-color: #a0a0a0;
-    color: white;
+    color: var(--body-color);
     cursor: pointer;
     font-size: 14px;
     font-weight: bold;
