--- a/style.css
+++ b/style.css
@@ -308,3 +308,24 @@ footer.main-footer{
     gap: 10px;
     
 }
+
+.message {
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+/* Quando der certo (Verde) /
+.message.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+/ Quando der erro (Vermelho) */
+.message.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
